# Humanoid-Robotics-Engineering-Book

./: PROJECT_SUMMARY.md  book.spec.yml  chunking-strategy.md  data-model.md  impl-plan-humanoid-robotics.md  quickstart.md  research.md  tasks-mcq.md  tasks.md
.specify/memory/: course_content_overview.md
backend/: .env  README.md  config.py  debug_extraction.py  pyproject.toml  rag_chatbot.py  requirements.txt  test_extraction.py  test_rag_functionality.py
backend/api/: cohere_client.py  gemini_service.py  main.py  openai_service.py  validation.py
backend/database/: config.py  qdrant_config.py  qdrant_service.py  schema.sql
backend/qdrant_data/: meta.json
backend/utils/: chunking.py  content_extraction.py
checklists/: rag-system.md  requirements.md  textbook-content.md
contracts/: content-api.yaml
docs/: CNAME
frontend/: docusaurus.config.ts
frontend/docs/Chapters/: foundations.mdx
frontend/src/css/: custom.css
frontend/src/services/: exerciseService.ts
frontend/src/utils/: validation.ts
history/prompts/1-humanoid-robotics-textbook/: 1-humanoid-robotics-spec-clarifications.spec.prompt.md  2-implementation-planning-session.plan.prompt.md
history/prompts/constitution/: 0001-initial-constitution-principles-defined.constitution.prompt.md
history/prompts/general/: 1-humanoid-robotics-textbook-spec.spec.prompt.md
history/prompts/humanoid-robotics/: 1-mcq-component-implementation-progress.green.prompt.md  (+3 more)
specs/1-humanoid-robotics-textbook/: spec.md
tests/api/: test_chapters.js
tests/education/: test_exercises.js
(+5 files in other folders)
