[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "bs4>=0.0.2",
    "fastapi>=0.124.0",
    "langchain>=1.1.2",
    "langchain-cohere>=0.5.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.1.1",
    "langchain-google-genai>=3.2.0",
    "langchain-groq>=1.1.0",
    "langchain-openai>=1.1.0",
    "langchain-qdrant>=1.1.0",
    "qdrant-client>=1.16.1",
    "uvicorn>=0.38.0",
]
